# ptt-crawler

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: article.rs  crawler.rs  lib.rs  main.rs  parser.rs
tests/: Gossiping_M.1119222611.A.7A9.html  Gossiping_M.1119222660.A.94E.html  Gossiping_M.1123769450.A.A1A.html  Gossiping_M.1173456473.A.F4F.html  Gossiping_M.1175469904.A.05B.html  Gossiping_M.1519661420.A.098.html  Gossiping_M.1577579359.A.B76.html  Soft_Job_M.1181801925.A.86E.html  Soft_Job_M.1181803258.A.666.html  Soft_Job_M.1181804025.A.7A7.html  Soft_Job_M.1181824048.A.244.html  Soft_Job_M.1519661420.A.098.html  WomenTalk_M.1143885175.A.C8D.html
