[package]
name = "ptt-crawler"
version = "0.1.0"
authors = ["cwouyang <cwouyang@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A crawler for the web version of PTT, the largest online community in Taiwan"
categories = ["command-line-utilities", "web-programming"]
keywords = ["PTT", "crawler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pttcrawler"
path = "src/lib.rs"

[[bin]]
name = "ptc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "0.5.0"
futures = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
regex = "1.3.3"
reqwest = { version = "0.10.1", features = ["cookies", "gzip"] }
select = "0.4.3"
serde = "1.0.27"
serde_derive = "1.0.104"
serde_json = "1.0.45"
structopt = "0.3.8"
strum = "0.17.1"
strum_macros = "0.17.1"
tokio = { version = "0.2.10", features = ["macros"] }
url = "2.1.1"

[dev-dependencies]
load_file = "1.0.0"
pretty_assertions = "0.6.1"
