[package]
name = "ptt-crawler"
version = "0.1.0"
authors = ["cwouyang <cwouyang@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cwouyang/ptt-crawler/"
readme = "README.md"
description = "A crawler for the web version of PTT, the largest online community in Taiwan"
categories = ["command-line-utilities", "web-programming"]
keywords = ["PTT", "crawler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pttcrawler"
path = "src/lib.rs"

[[bin]]
name = "ptc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
enum-iterator = "0.6.0"
fake-useragent = "0.1.3"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.7", features = ["cookies", "gzip"] }
select = "0.5.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
structopt = "0.3.16"
strum = "0.19.2"
strum_macros = "0.19.2"
tokio = { version = "0.2.22", features = ["macros"] }
url = "2.1.1"

[dev-dependencies]
load_file = "1.0.0"
pretty_assertions = "0.6.1"
